Colors in variables

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,9 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+
+$color-main: #ffbe78;
+$color-second: #e3f6f5;
+$color-third: #bae8e8;
+$color-paragraph: #2d334a;
+$color-headline: #272343
