--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -13,4 +13,4 @@ $color-main: #ffbe78;
 $color-second: #e3f6f5;
 $color-third: #bae8e8;
 $color-paragraph: #2d334a;
-$color-headline: #272343
+$color-headline: #272343;
