--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,6 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+
+<a class="btn-main" href="">Hello guys</a>
+<a class="btn-second"href="">Have a good day</a>
+
