Buttons small medium large. Buttons Chevrons up and down.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,27 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
-
-<a class="btn-main" href="">Hello guys</a>
-<a class="btn-second"href="">Have a good day</a>
-
+<div class= "d-flex justify-content-center">
+  <h1>Pages#home</h1>
+</div>
+<div class= "d-flex justify-content-center">
+  <p>Find me in app/views/pages/home.html.erb</p>
+</div>
+<div class="">
+  <div class="d-flex justify-content-center">
+    <a class="btn-main btn-large" href="">Accepter</a>
+  </div>
+  <br>
+  <div class="d-flex justify-content-center">
+    <a class="btn-second btn-medium"href="">Refuser</a>
+  </div>
+  <br>
+  <div class="d-flex justify-content-center">
+    <a class="btn-second btn-small"href="">Refuser</a>
+  </div>
+  <br>
+  <div class="d-flex justify-content-center">
+    <a href=""><i class="btn-scroll-down fas fa-chevron-down"></i></a>
+  </div>
+   <br>
+  <div class="d-flex justify-content-center">
+    <a href=""><i class="btn-scroll-up fas fa-chevron-up"></i></a>
+  </div>
+</div>
