added a background image for the display of cookbooks and created a partial scss file for the cookbook cards

--- a/app/views/cookbooks/index.html.erb
+++ b/app/views/cookbooks/index.html.erb
@@ -1,6 +1,14 @@
-<h1>All my cookbooks</h1>
-<ul>
+<h1>Mes livres de recettes</h1>
+<br>
+<div class="row">
   <% @cookbooks.each do |cookbook| %>
-    <li> <%= cookbook.name  %> </li>
+    <div class="column">
+      <%= link_to cookbook_path(cookbook), class: "cardit" do %>
+      <div class="card-ckbk">
+          <h5><%= cookbook.name  %></h5>
+          <p><%= cookbook.description  %></p>
+        <% end %>
+      </div>
+    </div>
   <% end %>
-</ul>
+</div>
