--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -10,8 +10,10 @@ $gray: #0E0000;
 $light-gray: #F4F4F4;
 
 $color-main: #ffbe78;
+$color-main-transparency: rgba(255, 190, 120, 0.7);
 $color-second: #e3f6f5;
 $color-third: #bae8e8;
+$color-third-transparency: rgba(186, 232, 232, 0.7);
 $color-paragraph: #2d334a;
 $color-headline: #272343;
 
