created a card for the recipes and also coded the index for the recipes controller

--- a/app/views/cookbooks/index.html.erb
+++ b/app/views/cookbooks/index.html.erb
@@ -12,3 +12,23 @@
     </div>
   <% end %>
 </div>
+
+
+<!-- <div class="bookshelf">
+  <div class="shelf">
+    <div class="row-1">
+      <div class="loc">
+        <div> <div class="sample book1" sample="steve-jobs"></div> </div>
+        <div> <div class="sample book2" sample="html5"></div> </div>
+        <div> <div class="sample book3" sample="docs"></div> </div>
+      </div>
+    </div>
+    <div class="row-2">
+      <div class="loc">
+        <div> <div class="sample book4" sample="magazine1"></div> </div>
+        <div> <div class="sample book5" sample="magazine2"></div> </div>
+        <div> <div class="sample book6" sample="magazine3"></div> </div>
+      </div>
+    </div>
+  </div>
+</div> -->
