--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,12 +1,16 @@
-<h1> <%= @recipe.name %> </h1>
+<div class="show-recipe">
+  <h1> <%= @recipe.name %> </h1>
 
-<% if @recipe.photos.attached? %>
-  <% @recipe.photos.each do |photo| %>
-    <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
+  <% if @recipe.photos.attached? %>
+    <% @recipe.photos.each do |photo| %>
+      <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
+    <% end %>
   <% end %>
-<% end %>
-<ul>
-  <li> Difficulté: <%= @recipe.difficulty  %> </li>
-  <li> Temps avant dégustation: <%= @recipe.cooking_time  %> min </li>
-  <li> Instructions: <%= @recipe.instructions  %> </li>
-</ul>
+
+  <ul>
+    <li> Difficulté: <%= @recipe.difficulty  %> </li>
+    <li> Temps de préparation: <%= @recipe.cooking_time  %> min </li>
+    <li> Instructions: <%= @recipe.instructions  %> </li>
+  </ul>
+
+</div>
