fixed the display issues to fit the screen of an Iphone 11

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -8,9 +8,9 @@
   <% end %>
 
   <ul>
-    <li> Difficulté: <%= @recipe.difficulty  %> </li>
-    <li> Temps de préparation: <%= @recipe.cooking_time  %> min </li>
-    <li> Instructions: <%= @recipe.instructions  %> </li>
+    <li> <strong>Difficulté:</strong> <%= @recipe.difficulty  %> </li>
+    <li> <strong>Temps de préparation:</strong> <%= @recipe.cooking_time  %> min </li>
+    <li> <strong>Instructions:</strong> <%= @recipe.instructions  %> </li>
   </ul>
 
 </div>
