--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -5,6 +5,7 @@
   bottom: 0;
   margin: 0;
   padding: 0;
+  padding-bottom: 25px;
 
   box-shadow: 1px 4px 8px rgba(0,0,0,0.07);
 }
@@ -18,7 +19,7 @@
     text-decoration: none;
     display: inline;
     width: 20%;
-    font-size: 10px;
+    font-size: 8px;
     text-align: center;
     padding-top: 6px;
     > a {
