--- a/app/views/cookbooks/index.html.erb
+++ b/app/views/cookbooks/index.html.erb
@@ -5,30 +5,10 @@
     <div class="column">
       <%= link_to cookbook_path(cookbook), class: "cardit" do %>
       <div class="card-ckbk">
-          <h5><%= cookbook.name  %></h5>
+          <h5><%= cookbook.name  %></h5> <br>
           <p><%= cookbook.description  %></p>
         <% end %>
       </div>
     </div>
   <% end %>
 </div>
-
-
-<!-- <div class="bookshelf">
-  <div class="shelf">
-    <div class="row-1">
-      <div class="loc">
-        <div> <div class="sample book1" sample="steve-jobs"></div> </div>
-        <div> <div class="sample book2" sample="html5"></div> </div>
-        <div> <div class="sample book3" sample="docs"></div> </div>
-      </div>
-    </div>
-    <div class="row-2">
-      <div class="loc">
-        <div> <div class="sample book4" sample="magazine1"></div> </div>
-        <div> <div class="sample book5" sample="magazine2"></div> </div>
-        <div> <div class="sample book6" sample="magazine3"></div> </div>
-      </div>
-    </div>
-  </div>
-</div> -->
