--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,12 +1,8 @@
 .footer {
   width: 100vw;
   background-color: $color-third;
-  position: absolute;
-  bottom: 0;
-  margin: 0;
-  padding: 0;
-  padding-bottom: 25px;
-
+  margin: 0 auto;
+  padding-bottom: 10px;
   box-shadow: 1px 4px 8px rgba(0,0,0,0.07);
 }
 .footer-list {
@@ -21,7 +17,6 @@
     width: 20%;
     font-size: 8px;
     text-align: center;
-    padding-top: 6px;
     > a {
       color: $color-paragraph;
     }
