--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -25,3 +25,7 @@
     <a href=""><i class="btn-scroll-up fas fa-chevron-up"></i></a>
   </div>
 </div>
+<br>
+<div class="d-flex justify-content-center">
+  <a href=""><i class="btn-back fas fa-chevron-left"></i></a>
+</div>
