--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid pb-2">
+<div class="container w-50">
 <!-- Fluid allows you to have a responsive container -->
   <h2>Sign up</h2>
 
