--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -2,7 +2,7 @@
   font-weight: bold;
   color: #FFFFFF;
 
-  background: #FFBE78;
+  background: $color-main;
   border-radius: 10px;
   padding: 15px 50px;
   text-decoration: none;
@@ -14,7 +14,7 @@
   font-weight: bold;
   color: #FFFFFF;
 
-  background: #BAE8E8;
+  background: $color-third;
   border-radius: 10px;
   padding: 15px 50px;
   text-decoration: none;
