--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -9,10 +9,10 @@ $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
 
-$color-main: rgba(255, 190, 120, 1);
+$color-main: #09BC8A;
 $color-main-transparency: rgba(255, 190, 120, 0.7);
 $color-second: #e3f6f5;
-$color-third: rgba(186, 232, 232, 1);
+$color-third: #ff4b5c;
 $color-third-transparency: rgba(186, 232, 232, 0.7);
 $color-paragraph: #2d334a;
 $color-headline: #272343;
