--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,6 +8,6 @@
           </div>
         </li>
       <% else %>
-        <%= link_to "Login", new_user_session_path, class: "btn btn-primary" %>
+        <%= link_to "Login", new_user_session_path, class: "btn" %>
       <% end %>
 </div>
