--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,9 +1,10 @@
 .footer {
   width: 100vw;
-  background-color: $color-third;
+  background-color: transparent;
   margin: 0 auto;
-  padding-bottom: 10px;
-  box-shadow: 1px 4px 8px rgba(0,0,0,0.07);
+  padding:0;
+
+  box-shadow: 4px 10px 10px 10px rgba(0,0,0,0.07);
 }
 .footer-list {
   list-style: none;
@@ -11,14 +12,17 @@
   align-items: center;
   margin: 0;
   padding: 0;
+
   li {
     text-decoration: none;
     display: inline;
     width: 20%;
     font-size: 8px;
     text-align: center;
+    padding-bottom: 10px;
+    padding-top: 10px;
     > a {
-      color: $color-paragraph;
+      color: black;
     }
   }
 }
@@ -28,6 +32,13 @@
 }
 
 .footer-active {
-  background-color: $color-main;
+  background-color: #0F6A50;
   font-weight: bold;
+  > a {
+    color: white!important;
+  }
 }
+
+body {
+  background-color:  rgb(245,245,245);
+  }
