--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,40 @@
 // Specific CSS for your home-page
+.container-home {
+  width: 90vw;
+  margin: 0 auto;
+  margin-top: 30vh;
+  justify-content: center;
+}
+
+.background-home {
+  background-image: url(https://i.pinimg.com/originals/0a/b0/1b/0ab01b56dc38aab735c65224a7c91827.jpg);
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+  margin: 0 auto;
+
+}
+
+
+.button {
+    font-size: 0.8rem;
+    font-weight: 400;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 0.25em;
+    text-decoration: none;
+    color: inherit;
+    border: none;
+    background-color: #f48c06;
+    box-shadow: 2px 2px 3px 0 rgba(0, 0, 0, 0.3);
+    padding: 1rem 1.5rem;
+    cursor: pointer;
+}
+
+#home-hidden {
+  visibility: hidden;
+}
+
+.iciiiiii{
+  color: white;
+}
