--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,27 +1,27 @@
-<div class= "d-flex justify-content-center">
-  <h1>Pages#home</h1>
-</div>
-<div class= "d-flex justify-content-center">
-  <p>Find me in app/views/pages/home.html.erb</p>
-</div>
-<div class="">
-  <div class="d-flex justify-content-center">
-    <a class="btn-main btn-large" href="">Accepter</a>
+<div class="background-home">
+<p id="home-hidden">""</p>
+  <div id="loader-wrapper">
+    <div class="text">
+      <h1 class="home-h1 text-center">T A K E A T</h1>
+      <h1 class="home-h2 text-center">E A S Y</h1>
+    </div>
+    <div id="loader"></div>
+    <div class="loader-section section-left"></div>
+    <div class="loader-section section-right"></div>
   </div>
-  <br>
-  <div class="d-flex justify-content-center">
-    <a class="btn-second btn-medium"href="">Refuser</a>
+
+  <div class="container-home d-flex">
+    <div class="row align-items-center ">
+      <div class="col-12 text-center">
+        <%= link_to "Explore our Recipes!", recipes_path, class: "button"  %>
+
+        <h2 class="iciiiiii"><br>Manage<br></h2>
+        <p><br></p>
+        <%= link_to "Log in", user_session_path, class: "btn-main" %>
+        <p><br></p>
+        <%= link_to "Register", new_user_registration_path, class: "btn-second btn-medium" %>
+      </div>
+    </div>
   </div>
-  <br>
-  <div class="d-flex justify-content-center">
-    <a class="btn-second btn-small"href="">Refuser</a>
-  </div>
-  <br>
-  <div class="d-flex justify-content-center">
-    <a href=""><i class="btn-scroll-down fas fa-chevron-down"></i></a>
-  </div>
-   <br>
-  <div class="d-flex justify-content-center">
-    <a href=""><i class="btn-scroll-up fas fa-chevron-up"></i></a>
-  </div>
+
 </div>
