--- a/app/views/weeks/show.html.erb
+++ b/app/views/weeks/show.html.erb
@@ -1,6 +1,26 @@
 <div class="container week-show">
   <h1 class="text-center">My week menu</h1>
 
+
+  <div class="swiper-container">
+    <!-- Additional required wrapper -->
+    <div class="swiper-wrapper">
+        <!-- Slides -->
+        <div class="swiper-slide">Slide 1</div>
+        <div class="swiper-slide">Slide 2</div>
+        <div class="swiper-slide">Slide 3</div>
+        ...
+    </div>
+    <!-- If we need pagination -->
+    <div class="swiper-pagination"></div>
+
+    <!-- If we need navigation buttons -->
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
+
+    <!-- If we need scrollbar -->
+    <div class="swiper-scrollbar"></div>
+  </div>
   <div class="card-week">
     SLIDERSHOW
     <a href="" id="left">GAUCHE</a>
