--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -42,3 +42,9 @@
   align-items: flex-end;
   position: relative;
 }
+
+// card pour today! en bootstrap
+
+#cards .card {
+    min-height: 100%;
+}
