--- a/app/assets/stylesheets/components/_weekcard.scss
+++ b/app/assets/stylesheets/components/_weekcard.scss
@@ -1,11 +1,14 @@
-.week-show {
-  background-color: #ffc2d4;
-}
 
-.week-show > h1 {
+.merienda {
   font-family: 'Merienda One', cursive;
 }
+.white{
+  color: white;
+}
 
+.position-bottom {
+  width: 337px;
+}
 .card-week {
   width: 350px;
   height: 450px;
