fixed controller redirect

--- a/app/views/weeks/show.html.erb
+++ b/app/views/weeks/show.html.erb
@@ -24,7 +24,7 @@
       <!-- If we need navigation buttons -->
       <div class="swiper-button-prev"></div>
       <div class="swiper-button-next"></div>
-
+      <div class="swiper-pagination"></div>
   </div>
 
   <div class="card-week-day shadow-sm">
