implement-user_profil

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,13 @@
 <div class="container text-center">
+  <img class="avatar-large" alt="avatar-large" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />
+  <br>
   <h1> Welcome <%= @user.first_name + " " + @user.last_name %></h1>
   <br>
-  <h2>Adress : <%= @user.address %></h2>
+  <p><i class="fas fa-map-marker-alt label"></i> <strong class="label">Adresse : </strong><%= @user.address %></p>
   <br>
-  <h2>How many mouthes : <%= @user.num_of_members %></h2>
+  <p><i class="far fa-envelope label"></i> <strong class="label">email : </strong><%= @user.email %></p>
   <br>
-  <h2>EMAIL : <%= @user.email %></h2>
+  <p><i class="fas fa-male label"></i> <strong class="label">Mon foyer : </strong><%= @user.num_of_members %> personnes</p>
+  <br>
+  <p><i class="fas fa-seedling label"></i> <strong class="label">Mes restrictions : </strong><%= @user.list_of_restrictions.join(", ") %> </p>
 </div>
