--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,7 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: transparent;
+  box-shadow: 1px 1px 1px rgba(0,0,0,0.05);
 }
 
 .navbar-lewagon .navbar-collapse {
