--- a/app/assets/stylesheets/components/_weekcard.scss
+++ b/app/assets/stylesheets/components/_weekcard.scss
@@ -1,11 +1,19 @@
 
-.merienda {
-  font-family: 'Merienda One', cursive;
-}
 .white{
   color: white;
+  display: block;
+  height: 100%;
+  width: 100%;
+}
+.weekbar {
+  margin-top: 15px;
 }
 
+.black{
+  color: black;
+  border: 1px solid black;
+  padding: 2px 10px;
+}
 .position-bottom {
   width: 337px;
 }
@@ -45,7 +53,7 @@
   width: 350px;
   margin: 0 auto;
   padding-top: 10px;
-  margin-top: 15px;
+  margin-top: 30px;
   .card-week-day-description {
     text-align: center;
   }
@@ -81,5 +89,18 @@
 
 .hidden {
   display: none!important;
+}
+
+
+// VIEW INDEX CONTROLLER WEEK
+
+.week-index-card {
+  margin: 20px auto;
+  padding: 5px 10px 0 10px;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  h3 {
+    color: black;
+  }
 }
 
