fix ui, headers, btn, translate franglais, add restriction and num of memb in user- seed

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -29,6 +29,7 @@
     box-shadow: 2px 2px 3px 0 rgba(0, 0, 0, 0.3);
     padding: 1rem 1.5rem;
     cursor: pointer;
+    border-radius: 7px;
 }
 
 #home-hidden {
@@ -37,4 +38,5 @@
 
 .iciiiiii{
   color: white;
+  font-weight: bold;
 }
