--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,15 +14,15 @@
     <div class="row align-items-center ">
       <div class="col-12 text-center">
 
-        <h2 class="iciiiiii pb-4">W E L C O M E<br></h2>
-        <%= link_to "Explore our Recipes!", recipes_path, class: "button"  %>
+        <h2 class="iciiiiii pb-4">B O N J O U R<br></h2>
+        <%= link_to "Explorer nos recettes!", recipes_path, class: "button"  %>
         <p><br></p>
         <div class="d-flex justify-content-around">
           <div >
-            <%= link_to "Log in", user_session_path, class: "btn-main" %>
+            <%= link_to "Connexion", user_session_path, class: "btn-main" %>
           </div>
           <div>
-            <%= link_to "Register", new_user_registration_path, class: "btn-second btn-medium" %>
+            <%= link_to "Créer un compte", new_user_registration_path, class: "btn-second btn-medium" %>
           </div>
         </div>
       </div>
