--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container text-center">
-  <img class="avatar-large" alt="avatar-large" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />
+  <img class="extra" alt="avatar-large" src="https://avatars2.githubusercontent.com/u/71122730?s=460&u=7e0d3549a504c6c81c658567df4be61ac223c86b&v=4" />
   <br>
   <h1> Bonjour <%= @user.first_name + " " + @user.last_name %></h1>
   <br>
