--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,9 +1,9 @@
 .btn-main {
-  font-weight: bold;
+  // font-weight: bold;
   color: #FFFFFF;
 
   background: $color-main;
-  border-radius: 10px;
+  border-radius: 7px;
   padding: 15px 50px;
   text-decoration: none;
   padding: 10px;
@@ -11,11 +11,11 @@
 }
 
 .btn-second {
-  font-weight: bold;
+  // font-weight: bold;
   color: #FFFFFF;
 
   background: $color-third;
-  border-radius: 10px;
+  border-radius: 7px;
   padding: 15px 50px;
   text-decoration: none;
   padding: 10px;
