--- a/app/assets/stylesheets/components/_htmlbody.scss
+++ b/app/assets/stylesheets/components/_htmlbody.scss
@@ -20,3 +20,26 @@ html, body {
 a:hover {
   text-decoration: none!important;
 }
+
+h1 {
+  font-size:30px;
+  text-align: center;
+  margin: 0 auto;
+}
+ h2 {
+  font-size:24px;
+  margin: 0 auto 0.25em auto;
+ }
+ h3 {
+  font-size:20px;
+  margin: 0 auto 0.5em auto;
+ }
+
+ h4 {
+  font-size:18px;
+  margin: 0 auto 0.5em auto;
+ }
+
+ p {
+  font-size:18px;
+ }
