--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container w-50">
 <!-- Fluid allows you to have a responsive container -->
-  <h2>Sign up</h2>
+  <h2>Créer un compte</h2>
 
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= f.error_notification %>
@@ -23,7 +23,7 @@
     </div>
 
     <div class="form-actions">
-      <%= f.button :submit, "Sign up" %>
+      <%= f.button :submit, "Créer un compte", class: "btn-main", style:"width: 100%; margin-bottom:30px"  %>
     </div>
   <% end %>
 
