--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,7 +7,8 @@
 @import "bootstrap/scss/bootstrap";
 @import "font-awesome-sprockets";
 @import "font-awesome";
-@import "swiper/swiper-bundle.css";
+// @import "swiper/swiper-bundle.css";
+@import "swiper/swiper-bundle";
 
 // Your CSS partials
 @import "components/index";
