--- a/app/views/meals/index.html.erb
+++ b/app/views/meals/index.html.erb
@@ -1,17 +1,19 @@
 <div class="container">
   <h1>Repas de la semaine</h1>
   <%= link_to "Valider semaine", today_week_path(@week.id) %>
-    <div class="row">
+    <div class="row_ml">
       <% @meals.each do |meal|%>
         <% recipe = meal.recipe %>
-        <div class="column">
+        <div class="column_ml">
           <%= link_to recipe_path(recipe) do %>
             <% if recipe.name == "EMPTY" %>
-              <div class="card-rcp" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url()">
-              <%= link_to "Changer", week_meal_path(meal.week_id,meal), :method=> :put %>
+              <div class="card-meal" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url()">
+              <%= link_to week_meal_path(meal.week_id,meal), :method=> :put do %>
+                <i class="fas fa-plus add"></i>
+              <% end %>
               </div>
             <% else %>
-              <div class="card-rcp" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(
+              <div class="card-meal" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(
                 <% if recipe.name == 'Omlette nature' %>
                   <%=  'https://fac.img.pmdstatic.net/fit/http.3A.2F.2Fprd2-bone-image.2Es3-website-eu-west-1.2Eamazonaws.2Ecom.2Ffac.2F2018.2F07.2F30.2Fd7199c6d-baf2-4570-a540-93551a0e2a04.jpeg' %>/omelette-piquante.jpeg" %>
                 <% #elsif recipe.photos.attached? %>
@@ -32,9 +34,13 @@
                   <%= 'https://img-3.journaldesfemmes.fr/zCdWcXo8IjfSP8MK8uAgxqetCq4=/910x607/smart/09ca38eb418e4ba4b8d5732c442a775b/ccmcms-jdf/10861244.jpg' %>
                 <% end %>
               )">
-              <h5><%= recipe.name %></h5>
-              <%= link_to "Changer", week_meal_path(meal.week_id,meal), :method=> :put %>
-              <%= link_to "Supprimer", week_empty_path(meal.week_id,meal), :method=> :put %>
+                <h5><%= recipe.name %></h5>
+                <%= link_to week_meal_path(meal.week_id,meal), :method=> :put do %>
+                  <i class="fas fa-sync chg"></i>
+                <% end %>
+                <%= link_to week_meal_path(meal.week_id,meal), :method=> :put do %>
+                  <i class="fas fa-minus del"></i>
+                <% end %>
               </div>
             <% end %>
           <% end %>
