--- a/app/assets/stylesheets/components/_card_for_meals.scss
+++ b/app/assets/stylesheets/components/_card_for_meals.scss
@@ -62,13 +62,13 @@
 
 .chg {
   position: absolute;
-  color: blue;
-  bottom: 100px;
-  right: 0px;
+  color: white;
+  bottom: 50px;
+  right: 50px;
 }
 
 .del {
-  color: red;
+  color: yellow;
   top: 0px;
   right: 0px;
 }
